<resources>
    <!-- General -->
    <string name="app_name">MoMo Bank</string>

    <!-- Auth -->
    <string name="already_registered_login_here">Already Registered? Login here</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="first_name_hint">First Name</string>
    <string name="guest_register_here">Guest? Register here</string>
    <string name="last_name_hint">Last Name</string>
    <string name="login">Login</string>
    <string name="nin_hint">NIN</string>
    <string name="password_hint">Password</string>
    <string name="phone_number_hint">Phone Number (256…)</string>
    <string name="register_hint">Register</string>
    <string name="sign_in_header">Sign in</string>
    <string name="sign_up_header">Register here</string>

    <!-- Welcome-->
    <string name="skip"><![CDATA[5 Skip>>]]></string>
    <string name="welcome_header">MoMo Bank</string>
    <string name="welcome_text">Welcome</string>

    <!-- Home -->
    <string name="accounts_balance">A/C Balance: 0.00</string>
    <string name="accounts_header">User Accounts</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="title_home">Home</string>

    <!-- Accounts -->
    <string name="account_balance">0.00</string>
    <string name="account_id">Account ID</string>
    <string name="account_type">Account Type</string>
    <string name="bank_name">MoMo Bank Name</string>

    <!-- Transactions -->
    <string name="account_name">MoMo A/C</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="title_transactions">Transactions</string>
    <string name="transaction_amount">0</string>
    <string name="transaction_date">10th-Jan-2020</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="transactions_header">All transactions</string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>
    <string name="settings_header">Name</string>

    <!-- Main Menu -->
    <string name="logout">Logout</string>
    <string name="divider">Divider</string>

</resources>
