<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".activities.accounts.AccountDetailsActivity">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/mtrl_card_spacing"
        app:cardCornerRadius="@dimen/mtrl_card_spacing"
        app:cardElevation="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="@dimen/activity_all_margin">

            <TextView
                android:id="@+id/tv_bank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/text_box_underline"
                android:text="@string/bank_name" />

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_bank"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/text_box_underline"
                android:text="@string/account_balance" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_balance"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/text_box_underline"
                android:text="@string/account_type" />

            <TextView
                android:id="@+id/tv_date_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_type"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/text_box_underline"
                android:text="@string/transaction_date" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
