<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#FAFAD2"
        app:cardCornerRadius="@dimen/default_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/account_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/tv_transaction_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_account_name"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/transaction_type"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tv_transaction_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_transaction_type"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/transaction_status"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tv_transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_transaction_status"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/account_balance"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tv_previous_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_transaction_amount"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/account_balance"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tv_new_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_previous_balance"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/account_balance"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/tv_transaction_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_new_balance"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/transaction_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>