<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_transaction_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/transaction_type"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_transaction_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="@dimen/default_padding"
                android:paddingLeft="@dimen/default_padding"
                android:paddingEnd="@dimen/default_padding"
                android:text="@string/transaction_date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_transaction_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/account_balance"
                android:textSize="16sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
