<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/button_height"
    android:padding="@dimen/default_padding">

    <LinearLayout
        android:id="@+id/actions_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/default_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_deposit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_padding"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:drawableTop="@drawable/ic_deposit"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:text="@string/deposit"
            android:textColor="#000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_withdraw"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_padding"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner"
            android:drawableTop="@drawable/ic_withdraw"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:text="@string/withdraw"
            android:textColor="#000" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_accounts_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:text="@string/accounts_balance"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/actions_view" />

    <TextView
        android:id="@+id/tv_accounts_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:text="@string/accounts_header"
        app:layout_constraintTop_toBottomOf="@+id/tv_accounts_balance" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_accounts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/list_bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_accounts_header"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
